# datalens-dev-mcp

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  README_en.md  README_ru.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
LICENSES/: CC-BY-4.0.txt
config/: datalens_api_methods.json  datalens_api_operation_policy.json  datalens_chart_decision_rules.json  datalens_chart_design_rules.json  datalens_chart_param_matrix.json  datalens_docs_feature_policy.json  datalens_mcp.local.example.json  datalens_routing_model.json  datalens_style_guide.json  datalens_visual_style_tokens.json  editor_authoring_profiles.json  golden_runtime_gallery_contracts.json  golden_runtime_gallery_inventory.json
datalens_dev_mcp/: __init__.py
docs/: README.md  README_en.md  access.md  access_en.md  architecture.md  codex_setup.md  codex_setup_en.md  configuration.md  configuration_en.md  datalens-auth.md  editor-authoring.md  getting-started.md  getting_started_local.md  governance.md  live_testing_local.md  local-only-safety-model.md  local-only-safety-model_en.md  materials_policy.md  mcp-configuration.md  one-prompt-workflow.md  policy_vocabulary.md  project_migration_adapter.md  project_workflow.md  roadmap.md  route-policy.md  route-policy_en.md  safe-apply.md  safe-apply_en.md  source_provenance.md  sources.md  sources_en.md  testing.md  tools.md  tools_en.md  usage-flow.md  usage-flow_en.md  widget-conversion-wizard-to-js.md
examples/: codex_prompts.md
schemas/: active_dashboard_graph.schema.json  aggregation-config.schema.json  browser_capture.schema.json  browser_runtime_smoke.schema.json  chart-spec.schema.json  connector-config.schema.json  dashboard-layout-spec.schema.json  dashboard-object-relations.schema.json  dashboard_chart_validation.schema.json  datalens-mcp-local-config.schema.json  editor-selector-contract.schema.json  existing_object_update_plan.schema.json  field-config.schema.json  guarded_rpc_request.schema.json  layout_intent_record.schema.json  (+11 more)
(+820 files in other folders)
